7519
The useful error messages can be elicited by speaking very slowly to scalac (or by commenting the expression entirely):

{code}
    /*
porcu.scala:5: error: type arguments [T] do not conform to class Template's type parameter bounds [T <: Object]
  type Repr[T]<:Template[T]
                ^
porcu.scala:42: error: overriding type Repr in class Template with bounds[T] <: gist2427426.Template[T];
 type Repr has incompatible type
  type Repr = CurveTemplate[T]
       ^
two errors found
    */

// in the attached code
object Example {
  def main(args:Array[String]) ={
    /*
    val template = new CurveTemplate(new Curve).withTimeout(2000L).withReadModifiers(ReadModifiers.DIRTY_READ).resolve
    println(template)
    */
    /*
    val a = new CurveTemplate(new Curve)
    val b = a.withTimeout(2000L)
// This is not yet germane
    //error: value withReadModifiers is not a member of a.Repr[gist2427426.Curve]
    val c = b.withReadModifiers(ReadModifiers.DIRTY_READ)
    val d = c.resolve
    println(d)
    */
    val a: CurveTemplate[Curve] = new CurveTemplate(new Curve)
    val b: CurveTemplate[Curve] = a.withTimeout(2000L)
    val c: CurveTemplate[Curve] = b.withReadModifiers(ReadModifiers.DIRTY_READ)
    val d = c.resolve
    println(d)
  }
}
{code}
